--- a/views/update-blog.hbs
+++ b/views/update-blog.hbs
@@ -43,7 +43,7 @@
                     </h1>
                     <div>
                         <label style="font-weight: bold; font-size: 20px" for="inputProject">Project Name</label>
-                        <input hidden type="text" name="image" value="{{edit.image}}" id="inputProject"/>
+                        <input hidden type="file" name="image" value="{{edit.image}}" id="inputProject"/>
                         <input style="
                     background-color: rgb(232, 235, 235); 
                     width: 100%; 
